--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2584,7 +2584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -2605,26 +2605,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Read demography csv file\n",
-    "demography = pd.read_csv('cleaned_demography_dataset.csv')\n"
+    "demographies = pd.read_csv('cleaned_demography_dataset.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
-    "demography_data = demography.copy()"
+    "demography_data = demographies.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
